feat(etl): preflight batches on bounded executor